--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
-.frame-child {
+body{
+    margin: 0;
+}
+
+/* .frame-child {
     position: absolute;
     top: 393px;
     left: 350px;
@@ -7,8 +11,8 @@
     background-color: #e70114;
     width: 368px;
     height: 368px;
-}
-.frame-item {
+} */
+/* .frame-item {
     position: absolute;
     top: -24px;
     left: 426px;
@@ -17,8 +21,8 @@
     background-color: #ffb7c6;
     width: 465px;
     height: 465px;
-}
-.frame-inner {
+} */
+/* .frame-inner {
     position: absolute;
     top: -35px;
     left: 732px;
@@ -27,8 +31,8 @@
     background-color: #1b1b1b;
     width: 741px;
     height: 740px;
-}
-.ellipse-div {
+} */
+/* .ellipse-div {
     position: absolute;
     top: 593px;
     left: 358px;
@@ -37,8 +41,8 @@
     background-color: #1b1b1b;
     width: 753px;
     height: 752px;
-}
-.frame-child1 {
+} */
+/* .frame-child1 {
     position: absolute;
     top: 507px;
     left: 658px;
@@ -47,15 +51,15 @@
     background-color: #ff8010;
     width: 442px;
     height: 442px;
-}
+} */
 .group-icon {
     position: absolute;
-    top: -58px;
-    left: -88px;
-    width: 2093px;
-    height: 1362px;
+    /* top: -58px;
+    left: -88px; */
+    width: 120rem;
+    height: 67.5rem;
 }
-.frame-child2 {
+/* .frame-child2 {
     position: absolute;
     top: 597px;
     left: 1025px;
@@ -64,75 +68,75 @@
     background-color: #ffb6c5;
     width: 518px;
     height: 518px;
-}
+} */
 .deathNoteP {
     position: absolute;
-    top: 263.53px;
-    left: 1207.35px;
-    width: 287px;
+    top: 16.471rem;
+    left: 75.459rem;
+    width: 17.938rem;
     /* height: 453.6px; */
     object-fit: contain;
     transform: rotate(4.95deg);
 }
 .blackCloverP {
     position: absolute;
-    top: 468.99px;
-    left: 1494.56px;
-    width: 287px;
+    top: 29.312rem;
+    left: 93.41rem;
+    width: 17.938rem;
     /* height: 443.8px; */
     object-fit: contain;
     transform: rotate(4.95deg);
 }
 .myHeroP {
     position: absolute;
-    top: 707.87px;
-    left: 1167.05px;
-    width: 287px;
+    top: 44.242rem;
+    left: 72.941rem;
+    width: 17.938rem;
     /* height: 474.9px; */
     object-fit: contain;
     transform: rotate(4.95deg);
 }
 .spyFamilyP {
     position: absolute;
-    top: -253px;
-    left: 642.03px;
-    width: 287px;
+    top: -15.812rem;
+    left: 40.127rem;
+    width: 17.938rem;
     /* height: 474.1px; */
     object-fit: contain;
     transform: rotate(4.95deg);
 }
 .hunterHunterP {
     position: absolute;
-    top: 901.37px;
-    left: 1456.31px;
-    width: 287px;
+    top: 56.336rem;
+    left: 91.019rem;
+    width: 17.938rem;
     /* height: 453.2px; */
     object-fit: contain;
     transform: rotate(4.95deg);
 }
 .haikyuP {
     position: absolute;
-    top: 634.68px;
-    left: 567px;
-    width: 287px;
+    top: 39.668rem;
+    left: 35.438rem;
+    width: 17.938rem;
     /* height: 453.2px; */
     object-fit: contain;
     transform: rotate(4.95deg);
 }
 .jujutsuP {
     position: absolute;
-    top: 206.77px;
-    left: 605.59px;
-    width: 287px;
+    top: 12.923rem;
+    left: 37.849rem;
+    width: 17.938rem;
     /* height: 442.2px; */
     object-fit: contain;
     transform: rotate(4.95deg);
 }
 .attackTitanP {
     position: absolute;
-    top: 900.04px;
-    left: 852.66px;
-    width: 287px;
+    top: 56.253rem;
+    left: 53.291rem;
+    width: 17.938rem;
     /* height: 435.2px; */
     object-fit: contain;
     transform: rotate(4.95deg);
@@ -141,7 +145,7 @@
     position: absolute;
     top: -42.56px;
     left: 927.95px;
-    width: 287px;
+    width: 17.938rem;
     /* height: 474.1px; */
     object-fit: contain;
     transform: rotate(4.95deg);
@@ -150,7 +154,7 @@
     position: absolute;
     top: -185.79px;
     left: 1245.79px;
-    width: 287px;
+    width: 17.938rem;
     /* height: 458.9px; */
     object-fit: contain;
     transform: rotate(4.95deg);
@@ -159,7 +163,7 @@
     position: absolute;
     top: 2.73px;
     left: 1532.3px;
-    width: 287px;
+    width: 17.938rem;
     /* height: 474.1px; */
     object-fit: contain;
     transform: rotate(4.95deg);
@@ -168,7 +172,7 @@
     position: absolute;
     top: 428.77px;
     left: 889.59px;
-    width: 287px;
+    width: 17.938rem;
     /* height: 433.9px; */
     object-fit: contain;
     transform: rotate(4.95deg);
@@ -269,9 +273,9 @@
     font-size: 15px;
     color: #fff;
 }
-.sign-up {
+/* .sign-up {
     position: absolute;
-    top: 310px;
+    top: 210px;
     left: 230px;
     font-size: 64px;
     font-weight: 600;
@@ -282,7 +286,7 @@
 }
 .nihonnet {
     position: absolute;
-    top: 258px;
+    top: 158px;
     left: 230px;
     font-size: 36px;
     font-weight: 600;
@@ -290,39 +294,45 @@
     display: inline-block;
     width: 195px;
     height: 47px;
-}
+} */
 .frame-child14 {
-    position: absolute;
-    top: 402px;
-    left: 230px;
+    /* position: absolute; */
+    /* top: 402px;
+    left: 230px; */
     width: 30px;
     height: 30px;
     object-fit: cover;
 }
 .frame-child15 {
-    position: absolute;
-    top: 402px;
-    left: 330px;
+    /* position: absolute; */
+    /* top: 402px;
+    left: 330px; */
     width: 30px;
     height: 30px;
     object-fit: cover;
 }
 .frame-child16 {
-    position: absolute;
-    top: 402px;
-    left: 280px;
+    /* position: absolute; */
+    /* top: 402px;
+    left: 280px; */
     width: 30px;
     height: 30px;
     object-fit: cover;
 }
 .frame-child17 {
-    position: absolute;
-    top: 399px;
-    left: 378px;
+    /* position: absolute; */
+    /* top: 399px;
+    left: 378px; */
     width: 35px;
     height: 35px;
     object-fit: cover;
 }
+
+.socials{
+    padding-left: 74px;
+    justify-content: space-around;
+}
+
 .ellipse-parent {
     width: 100%;
     position: relative;
@@ -343,23 +353,96 @@
     background-color: rgba(255, 255, 255, 0.59);
     width: 457px;
     height: 686px;
+    /* padding: 1em 2em; */
 }
 
 fieldset {
-    min-width: 100%;
-    width: 100%;
-
+    /* min-width: 100%; */
+    /* width: 100%; */
+    border: none;
+    /* height: 45px; */
+    padding-left: 74px;
 }
 
 #contact input, #contact textarea{
-    width: 100%;
-    border: 1px solid #808080;
+    /* width: 309px; */
+    /* border: 1px solid #808080; */
     background-color: #fff;
-
+    height: 45px;
+    border-radius: 8px;
+    border: none;
+    /* align-items: center; */
 }
 
 #contact textarea{
     height: 100px;
-    max-width: fit-content;
-    
+}
+
+#contact input, #contact textarea, #contact button{
+    font-size: 18px;
+    font-weight: 400;
+}
+
+#contact button{
+    cursor: pointer;
+    width: 183px;
+    height: 40px;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    font-weight: 500;
+}
+
+#contact p{
+    color: #000;
+    display: block;
+    padding-left: 74px;
+}
+
+.nihonnet{
+    font-weight: 500;
+    font-size: 36px;
+}
+
+.sign-up{
+    font-weight: 600;
+    font-size: 64px;
+}
+
+.fname{
+    font-size: 0;
+    /* display: flex; */
+}
+
+.fname input{
+    display: inline-block;
+    width: 151px;
+    margin: 0%;
+}
+
+.uname{
+    font-size: 0;
+    /* display: flex; */
+}
+
+.uname input{
+    display: inline-block;
+    width: 151px;
+    margin: 0%;
+}
+
+.flex{
+    display: flex;
+    font-size: 0;
+    /* justify-content: space-between; */
+}
+
+.pswd input{
+    width: 309px;
+}
+
+.mail input{
+    width: 309px;
 }
