--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
     font-family: "Noto Sans JP", sans-serif;
 }
 
+
 /* Header styling */
 header {
     background-color: #333;
@@ -72,11 +73,18 @@ header .logo {
 .carousel-caption p {
     font-size: 1.1rem;
 }
+.code-block {
+    padding: 10px;
+    margin-right: 20px; /* Space between code block and carousel */
+    width: 60%; /* Adjust width as needed */
+}
+
 
 /* Products section */
 .products {
     padding: 2rem 0;
     text-align: center;
+    background-color: #e93d4c;
 }
 
 .products h2 {
