--- a/main.css
+++ b/main.css
@@ -2,36 +2,6 @@ body{
     margin: 0;
 }
 
-/* .frame-child {
-    position: absolute;
-    top: 393px;
-    left: 350px;
-    filter: blur(120px);
-    border-radius: 50%;
-    background-color: #e70114;
-    width: 368px;
-    height: 368px;
-} */
-/* .frame-item {
-    position: absolute;
-    top: -24px;
-    left: 426px;
-    filter: blur(80px);
-    border-radius: 50%;
-    background-color: #ffb7c6;
-    width: 465px;
-    height: 465px;
-} */
-/* .frame-inner {
-    position: absolute;
-    top: -35px;
-    left: 732px;
-    filter: blur(100px);
-    border-radius: 50%;
-    background-color: #1b1b1b;
-    width: 741px;
-    height: 740px;
-} */
 /* .ellipse-div {
     position: absolute;
     top: 593px;
@@ -71,7 +41,7 @@ body{
 } */
 .deathNoteP {
     position: absolute;
-    top: 16.471rem;
+    top: 16.891rem;
     left: 75.459rem;
     width: 17.938rem;
     /* height: 453.6px; */
@@ -98,7 +68,7 @@ body{
 }
 .spyFamilyP {
     position: absolute;
-    top: -15.812rem;
+    top: -15.412rem;
     left: 40.127rem;
     width: 17.938rem;
     /* height: 474.1px; */
@@ -116,7 +86,7 @@ body{
 }
 .haikyuP {
     position: absolute;
-    top: 39.668rem;
+    top: 40.168rem;
     left: 35.438rem;
     width: 17.938rem;
     /* height: 453.2px; */
@@ -125,7 +95,7 @@ body{
 }
 .jujutsuP {
     position: absolute;
-    top: 12.923rem;
+    top: 13.223rem;
     left: 37.849rem;
     width: 17.938rem;
     /* height: 442.2px; */
@@ -134,7 +104,7 @@ body{
 }
 .attackTitanP {
     position: absolute;
-    top: 56.253rem;
+    top: 55.253rem;
     left: 53.291rem;
     width: 17.938rem;
     /* height: 435.2px; */
@@ -152,7 +122,7 @@ body{
 }
 .onTitanP {
     position: absolute;
-    top: -185.79px;
+    top: -175.39px;
     left: 1245.79px;
     width: 17.938rem;
     /* height: 458.9px; */
@@ -170,7 +140,7 @@ body{
 }
 .onePieceP {
     position: absolute;
-    top: 428.77px;
+    top: 418.77px;
     left: 889.59px;
     width: 17.938rem;
     /* height: 433.9px; */
@@ -295,38 +265,6 @@ body{
     width: 195px;
     height: 47px;
 } */
-/* .frame-child14 {
-    position: absolute;
-    top: 402px;
-    left: 230px;
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-} */
-/* .frame-child15 {
-    position: absolute;
-    top: 402px;
-    left: 330px;
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-} */
-/* .frame-child16 {
-    position: absolute;
-    top: 402px;
-    left: 280px;
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-} */
-/* .frame-child17 {
-    position: absolute;
-    top: 399px;
-    left: 378px;
-    width: 35px;
-    height: 35px;
-    object-fit: cover;
-} */
 
 .ellipse-parent {
     width: 100%;
@@ -353,10 +291,7 @@ body{
 }
 
 fieldset {
-    /* min-width: 100%; */
-    /* width: 100%; */
     border: none;
-    /* margin-bottom: 10px; */
 }
 
 #contact input, #contact textarea{
@@ -366,8 +301,6 @@ fieldset {
     height: 45px;
     border-radius: 8px;
     border: none;
-    /* padding-left: 12px; */
-    /* align-items: center; */
 }
 
 #contact input, #contact textarea, #contact button{
@@ -391,26 +324,36 @@ fieldset {
 
 #contact p{
     color: #000;
-    display: block;
+    /* display: block; */
     font-family: "Noto Sans Jp", sans-serif;
+    margin: 0%;
 }
 
 .nihonnet{
     font-size: 0;
     padding: 0%;
+    /* position: absolute; */
+    display: inline-block;
+    width: 195px;
+    height: 36px;
+    padding-top: 61px;
 }
 
 .nihonnet p{
-    font-weight: 500;
+    font-weight: 600;
     font-size: 36px;
 }
 
-.sign-up{
+.signup{
     font-size: 0;
     padding: 0%;
+    /* position: absolute; */
+    display: inline-block;
+    width: 267px;
+    height: 64px;
 }
 
-.sign-up p{
+.signup p{
     font-weight: 600;
     font-size: 64px;
 }
@@ -449,7 +392,7 @@ fieldset {
 
 .mail{
     font-size: 0;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 }
 
 .mail input{
@@ -459,19 +402,78 @@ fieldset {
 
 .socials{
     display: flex;
-    /* padding-left: 74px; */
+    margin-bottom: 61px;
+    margin-top: 16px;
 }
 
-.iconO{
-    /* width: 30px; */
+/* .iconO{
     flex: 10%;
     padding: 0%;
-}
+    display: inline-block;
+    padding-right: 20px;
+} */
 
 .iconO img{
     width: 30px;
+    height: 30px;
+    margin: 0%;
+    padding-right: 20px;
+}
+
+.icon1 img{
+    width: 30px;
+    height: 30px;
+    margin: 0%;
+    padding-right: 20px;
+}
+
+.icon2 img{
+    width: 30px;
+    height: 30px;
+    margin: 0%;
+    padding-right: 20px;
+}
+
+.icon3 img{
+    width: 30px;
+    height: 30px;
     margin: 0%;
 }
+
+/* .frame-child14 {
+    position: relative;
+    top: 102px;
+    left: 100px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    display: inline-block;
+}
+.frame-child15 {
+    position: relative;
+    top: 102px;
+    left: 130px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    display: inline-block;
+}
+.frame-child16 {
+    position: absolute;
+    top: 402px;
+    left: 280px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
+.frame-child17 {
+    position: absolute;
+    top: 399px;
+    left: 278px;
+    width: 33px;
+    height: 33px;
+    object-fit: cover;
+} */
 
 .names{
     display: inline-block;
@@ -480,4 +482,64 @@ fieldset {
 
 .button{
     font-size: 0;
+    /* margin-bottom: 77px; */
+}
+
+#contact2 {
+    position: absolute;
+    top: 14.438rem;
+    left: 9.75rem;
+    border-radius: 32px;
+    background-color: rgba(255, 255, 255, 0.59);
+    width: 19.313rem;
+    height: 38.625rem;
+    padding-left: 4.625rem;
+    padding-right: 4.625rem;
+    /* padding: 1em 2em; */
+}
+
+#contact2 input, #contact2 textarea{
+    /* width: 309px; */
+    /* border: 1px solid #808080; */
+    background-color: #fff;
+    height: 45px;
+    border-radius: 8px;
+    border: none;
+}
+
+#contact2 input, #contact2 textarea, #contact2 button{
+    font-size: 15px;
+    font-weight: 400;
+    font-family: "Noto Sans Jp", sans-serif;
+}
+
+#contact2 button{
+    cursor: pointer;
+    width: 11.438rem;
+    height: 3.125rem;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    font-weight: 500;
+    font-family: "Noto Sans Jp", sans-serif;
+}
+
+#contact2 p{
+    color: #000;
+    /* display: block; */
+    font-family: "Noto Sans Jp", sans-serif;
+    margin: 0%;
+}
+
+.psp {
+    text-align: right;
+
+}
+
+.button2{
+    font-size: 0;
+    /* margin-bottom: 77px; */
+    margin-top: 12px;
 }
