--- a/css/homepage.css
+++ b/css/homepage.css
@@ -221,19 +221,19 @@ header {
 .products {
     padding: 2rem 0;
     text-align: center;
-    background-color: #e93d4c;
+    background-color: #1c1c1c;
 }
 
 .products h2 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
-    color: #333;
+    color: #fff;
     font-family: "Noto Sans JP", sans-serif;
 }
 
 .products p {
     font-size: 1.1rem;
-    color: #666;
+    color: #fff;
 }
 
 /* Image wrapper and sizing */
@@ -276,8 +276,8 @@ header {
 
 /* Footer styling */
 footer {
-    background-color: #1c1c1c;
-    color: #fff;
+    background-color: #FFB7C5;
+    color: #1c1c1c;
     padding: 2rem 0;
     font-family: "Noto Sans JP", sans-serif;
 }
@@ -288,7 +288,7 @@ footer .footer-links {
 }
 
 footer .footer-links a {
-    color: #fff;
+    color: #1c1c1c;
     margin-right: 15px;
     text-decoration: none;
 }
