--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,26 @@ body{
     margin: 0;
 }
 
+/* .ellipse-div {
+    position: absolute;
+    top: 593px;
+    left: 358px;
+    filter: blur(120px);
+    border-radius: 50%;
+    background-color: #1b1b1b;
+    width: 753px;
+    height: 752px;
+} */
+/* .frame-child1 {
+    position: absolute;
+    top: 507px;
+    left: 658px;
+    filter: blur(150px);
+    border-radius: 50%;
+    background-color: #ff8010;
+    width: 442px;
+    height: 442px;
+} */
 .group-icon {
     position: absolute;
     /* top: -58px;
@@ -9,7 +29,16 @@ body{
     width: 120rem;
     height: 67.5rem;
 }
-
+/* .frame-child2 {
+    position: absolute;
+    top: 597px;
+    left: 1025px;
+    filter: blur(100px);
+    border-radius: 50%;
+    background-color: #ffb6c5;
+    width: 518px;
+    height: 518px;
+} */
 .deathNoteP {
     position: absolute;
     top: 16.891rem;
@@ -118,7 +147,124 @@ body{
     object-fit: contain;
     transform: rotate(4.95deg);
 }
-
+/* .rectangle-div {
+    position: absolute;
+    top: 197px;
+    left: 156px;
+    border-radius: 32px;
+    background-color: rgba(255, 255, 255, 0.59);
+    width: 457px;
+    height: 686px;
+}
+.group-child {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 8px;
+    background-color: #fff;
+    width: 309px;
+    height: 45px;
+}
+.email-address {
+    position: absolute;
+    top: 15px;
+    left: 19px;
+}
+.rectangle-parent {
+    position: absolute;
+    top: 570px;
+    left: 230px;
+    width: 309px;
+    height: 45px;
+} */
+/* .group-item {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 8px;
+    background-color: #fff;
+    width: 151px;
+    height: 45px;
+} */
+/* .rectangle-group {
+    position: absolute;
+    top: 513px;
+    left: 230px;
+    width: 151px;
+    height: 45px;
+} */
+/* .username {
+    position: absolute;
+    top: 15px;
+    left: 22px;
+} */
+/* .rectangle-container {
+    position: absolute;
+    top: 513px;
+    left: 388px;
+    width: 151px;
+    height: 45px;
+} */
+/* .group-div {
+    position: absolute;
+    top: 644px;
+    left: 230px;
+    width: 309px;
+    height: 45px;
+} */
+/* .rectangle-parent1 {
+    position: absolute;
+    top: 702px;
+    left: 230px;
+    width: 309px;
+    height: 45px;
+} */
+/* .group-child3 {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 8px;
+    background-color: #000;
+    width: 183px;
+    height: 39px;
+} */
+/* .create-account {
+    position: absolute;
+    top: 11px;
+    left: 36px;
+    font-weight: 500;
+} */
+/* .rectangle-parent2 {
+    position: absolute;
+    top: 767px;
+    left: 230px;
+    width: 183px;
+    height: 39px;
+    font-size: 15px;
+    color: #fff;
+} */
+/* .sign-up {
+    position: absolute;
+    top: 210px;
+    left: 230px;
+    font-size: 64px;
+    font-weight: 600;
+    color: #000;
+    display: inline-block;
+    width: 267px;
+    height: 84px;
+}
+.nihonnet {
+    position: absolute;
+    top: 158px;
+    left: 230px;
+    font-size: 36px;
+    font-weight: 600;
+    color: #000;
+    display: inline-block;
+    width: 195px;
+    height: 47px;
+} */
 
 .ellipse-parent {
     width: 100%;
@@ -294,6 +440,41 @@ fieldset {
     margin: 0%;
 }
 
+/* .frame-child14 {
+    position: relative;
+    top: 102px;
+    left: 100px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    display: inline-block;
+}
+.frame-child15 {
+    position: relative;
+    top: 102px;
+    left: 130px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    display: inline-block;
+}
+.frame-child16 {
+    position: absolute;
+    top: 402px;
+    left: 280px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
+.frame-child17 {
+    position: absolute;
+    top: 399px;
+    left: 278px;
+    width: 33px;
+    height: 33px;
+    object-fit: cover;
+} */
+
 .names{
     display: inline-block;
     /* width: 151px; */
@@ -363,12 +544,6 @@ fieldset {
     margin-top: 12px;
 }
 
-.single-body{
-    background-color: #1C1C1C;
-    width: 100vw;
-    height: 100vh;
-}
-
 .dark-section{
     background-color: #1c1c1c;
     width: 100vw;
@@ -376,11 +551,11 @@ fieldset {
     position: relative;
 }
 
-/* .image-container {
+.image-container {
     position: relative;
     width: 100vw;
     height: 100vh;
-  } */
+  }
 
   .absolute-image {
     position: absolute;
@@ -399,7 +574,7 @@ fieldset {
   .absolute-text {
     position: absolute;
     color: white;
-    font-size: 66px;
+    font-size: 96px;
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 500;
     left: 706px;
@@ -416,25 +591,24 @@ fieldset {
   .absolute-text-jp {
     position: absolute;
     color: white;
-    font-size: 34px;
+    font-size: 64px;
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 500;
     left: 706px;
-    top: 419px;
+    top: 439px;
     word-wrap: break-word;
   }
 
   .watchlist-container {
     position: absolute;
-    width: 214px;
+    width: 228px;
     height: 42px;
     left: 706px;
-    top: 548px;
+    top: 556px;
     border: 1.5px solid #FF7F11;
     display: flex;
     align-items: center;
     padding-left: 4px;
-    background-color: #1C1C1C;
   }
 
   .bookmark-icon {
@@ -444,7 +618,7 @@ fieldset {
 
   .watchlist-text {
     color: #FF7F11;
-    font-size: 20px;
+    font-size: 22px;
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 500;
     margin-left: 7px;
@@ -452,14 +626,14 @@ fieldset {
 
   .text-container-des {
     position: absolute;
-    width: 864px;
-    /* height: 256px; */
+    /* width: 864px;
+    height: 256px; */
     left: 706px;
     top: 655px;
     color: white;
-    font-size: 18px;
+    font-size: 22px;
     font-family: 'Noto Sans JP', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     word-wrap: break-word;
   }
 
@@ -488,21 +662,7 @@ fieldset {
   }
   
 
-/* Basic resets */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.homepage-body {
-    font-family: Arial, sans-serif;
-    background-color: #FFB7C5;
-    font-family: "Noto Sans JP", sans-serif;
-}
-
-
-/* Main header styling */
+  /* Main header styling */
 .homepage-header {
     background-color: #1c1c1c;
     color: #fff;
